@@ -29,7 +29,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Added "Advanced search" link to the search form
 * Special:Upload can now have a custom upload message instead of uploadtext by
   passing "uploadmsg" parameter in the url
-
+* (bug 9947) Add PROTECTIONLEVEL parser funtion to return the protection level
+  for the current page for a given action
+  
 === Bug fixes in 1.15 ===
 
 
